# restaurant

./: Cargo.toml  README.md
src/: app.rs  config.rs  entities.rs  lib.rs  main.rs  meals_catalog.rs  order.rs  storage.rs
src/api/: mod.rs  order.rs
