[package]
name = "restaurant"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = "0.4.25"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }
tokio = { version = "1.28.2", features = ["full"] }
