[package]
name = "restaurant"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = { version = "0.4.25", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.18"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "3.0.0", features = ["chrono"] }
simplelog = "0.12.1"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
hyper = { version = "0.14.26", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
